--- a/myproject/patients/templates/login.html
+++ b/myproject/patients/templates/login.html
@@ -8,16 +8,21 @@
     <link rel="stylesheet" href="{% static 'login.css' %}">
 </head>
 <body>
-    <div class="container">
+    <div class="login-container">
         <h2>Login</h2>
-        <form method="POST">
+        <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
-            {{ form.as_p }}
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
             <button type="submit">Login</button>
         </form>
-        <div class="signup-link">
-            Don't have an account? <a href="{% url 'register' %}">Sign up</a>
-        </div>
+        <p>Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
     </div>
 </body>
 </html>
