--- a/myproject/patients/templates/landing_page.html
+++ b/myproject/patients/templates/landing_page.html
@@ -1,45 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'landing-page.css' %}">
-</head>
-<body>
-    <header>
-        <h1>Welcome to Acerld Dental Care</h1>
-    </header>
-
-    <main class="container">
-        <!-- Promotional Offers Section -->
-        <div id="promotional-offers" class="promotional-offers-container">
-            <h1>Promotional Offers</h1>
-            <div class="slideshow-container">
-                {% for offer in promotional_offers %}
-                    <div class="mySlides fade">
-                        <img src="{{ offer.image.url }}" alt="{{ offer.title }}" style="width:100%">
-                        <div class="text">
-                            <h2>{{ offer.title }}</h2>
-                            <p>{{ offer.description }}</p>
-                        </div>
-                    </div>
-                {% endfor %}
-                <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'landing-page.css' %}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Gruppo&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    </head>
+    <body>
+        <header class="header">
+            <nav class="navbar">
+                <img class="tooth" src="{% static 'toothicon.png' %}">
+                <button>Home</button>
+                <button>Our Team</button>
+                <button>Services</button>
+                <button>Contact Us</button>
+            </nav>
+            <div class="icon">
+                <a> href="{% url 'login' %}">Login</a>
             </div>
-            <br>
-            <!-- The dots/circles -->
-            <div style="text-align:center">
-                {% for offer in promotional_offers %}
-                    <span class="dot" onclick="currentSlide({{ forloop.counter }})"></span>
-                {% endfor %}
+        </header>
+
+        <!--Slideshow Section-->
+        <div id="home" class="slideshow-container">
+            <div class="slides">
+                <img src="{% static 'slide1.jpeg' %}" alt="slide1">
+            </div>
+            <div class="slides">
+                <img src="{% static 'slide2.jpg' %}" alt="slide2">
+            </div>
+            <div class="slides">
+                <img src="{% static 'slide1.jpeg' %}" alt="slide3">
+            </div>
+        </div>
+        <div class="dots-container">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+
+        <!--Description Section-->
+        <div class="description-container">
+            <div class="title">
+                <h1>Acerld Dental Care</h1>
+            </div>
+            <div class="description">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus posuere bibendum urna nec sagittis. Donec eu sodales erat, pharetra aliquam erat. Pellentesque venenatis laoreet neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius ex. Phasellus dapibus dui.
+                </p>
+            </div>
+        </div>
+        <hr>
+
+        <!--Skilled Dentists Section-->
+        <div id="our-team" class="dentist-header-container">
+            <div class="dentist-header">
+                <h1>Meet Our Skilled Dentists</h1>
+            </div>
+            <div class="dentist-description">
+                <p>Our team of dedicated dental professionals is passionate about their craft and committed to advancing their expertise in the field. 
+                    Discover more about the individuals behind the practice and the dedication that drives them to provide exceptional care.
+                    </p>
+            </div>
+        </div>
+        <div class="dentist-container">
+            <div class="dentist">
+                <img src="{% static 'slide1.jpeg' %}" alt="dentist1">
+                <div class="dentist-name">
+                    <h1>Dr. Peter Yesser</h1>
+                </div>
+                <div class="dentist-pos">
+                    <p>Pediatric Dentistry</p>
+                </div>
+            </div>
+            <div class="dentist">
+                <img src="Sample.jpg" alt="dentist2">
+                <div class="dentist-name">
+                    <h1>Dr. Peter Yesser</h1>
+                </div>
+                <div class="dentist-pos">
+                    <p>Pediatric Dentistry</p></div>
+            </div>
+            <div class="dentist">
+                <img src="Sample.jpg" alt="dentist3">
+                <div class="dentist-name">
+                    <h1>Dr. Peter Yesser</h1>
+                </div>
+                <div class="dentist-pos">
+                    <p>Pediatric Dentistry</p>
+                </div>
             </div>
         </div>
 
-        <!-- Services Section -->
+        <!---Services Section--->
+
         <div id="services" class="container">
             <h1>Services We Offer</h1>
             <main class="services">
@@ -51,34 +111,41 @@
                 <div class="service-box"></div>
             </main>
             <div class="appointment">
-                {% if user.is_authenticated %}
-                    <a href="{% url 'book_appointment' %}">Make An Appointment</a>
-                {% else %}
-                    <div class="blur">
-                        <p>You must <a href="{% url 'login' %}">login</a> first to make an appointment. Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
-                    </div>
-                {% endif %}
+                <a href="Appointment Page.html">Make An Appointment</a>
             </div>
         </div>
-    </main>
 
-    <!-- Contact Us and Direction Section -->
-    <div id="contact-us" class="contact-container">
-        <div class="section contact">
-            <h1>Contact Us</h1>
-            <div class="contact-group">
-                <div class="contacts">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i>Acerld Dental Care</a>
-                    <a href="#"><i class="fa-solid fa-phone"></i>+63 977 822 8627</a>
-                    <a href="#"><i class="fa-solid fa-envelope"></i>acerlddentalcare@gmail.com</a>
+        <!--Contact Us and Direction Section-->
+
+        <div id="contact-us" class="contact-container">
+            <div class="section contact">
+                <h1>Contact Us</h1>
+                <div class="contact-group">
+                    <div class="contacts">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i>Acerld Dental Care</a>
+                        <a href="#"><i class="fa-solid fa-phone"></i>+63 977 822 8627</a>
+                        <a href="#"><i class="fa-solid fa-envelope"></i>acerlddentalcare@gmail.com</a>
+                    </div>
                 </div>
             </div>
+            <div class="section location">
+                <h1>Where to find Us?</h1>
+                <div class="map-box"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d632.9316372442667!2d121.08011861464253!3d14.559136050577871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c7d5e5d08d15%3A0x84e8221dd93025c5!2sAcerld%20Dental%20Care!5e1!3m2!1sen!2sph!4v1736094162870!5m2!1sen!2sph" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            </div>
         </div>
-        <div class="section location">
-            <!-- Add location details here -->
-        </div>
-    </div>
 
-    <script src="{% static 'script.js' %}"></script>
-</body>
+        <!--Accredited HMOs Section-->
+
+        <div class="hmo-container">
+            <h1>Accredited HMO's</h1>
+            <div class="hmo">
+                <div><img src="{% static '2.png' %}" alt="HMO 1"></div>
+                <div><img src="{% static '2.png' %}" alt="HMO 2"></div>
+                <div><img src="{% static '2.png' %}" alt="HMO 3"></div>
+            </div>
+        </div>
+        
+        <script src="{% static 'script.js' %}"></script>
+        
+    </body>
 </html>
