--- a/myproject/patients/templates/landing_page.html
+++ b/myproject/patients/templates/landing_page.html
@@ -23,7 +23,7 @@
                 <button>Contact Us</button>
             </nav>
             <div class="icon">
-                <a> href="{% url 'login' %}">Login</a>
+                <a href="{% url 'login' %}">Login</a>
             </div>
         </header>
 
