--- a/myproject/patients/templates/login.html
+++ b/myproject/patients/templates/login.html
@@ -22,7 +22,9 @@
             </div>
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
+        <div class="signup-link">
+            <p>Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
+        </div>
     </div>
 </body>
 </html>
