--- a/myproject/static/register.css
+++ b/myproject/static/register.css
@@ -29,14 +29,14 @@
         .container button {
             width: 100%;
             padding: 10px;
-            background-color: #28a745;
+            background-color: #007BFF;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
         }
         .container button:hover {
-            background-color: #218838;
+            background-color: #0056b3;
         }
         .login-link {
             margin-top: 15px;
