--- a/myproject/patients/templates/admin_dashboard.html
+++ b/myproject/patients/templates/admin_dashboard.html
@@ -46,7 +46,7 @@
                     <tr>
                         <th>Appointment ID</th>
                         <th>Patient Name</th>
-                        <th>Dentist</th>
+                        <th>Doctor</th>
                         <th>Date & Time</th>
                         <th>Status</th>
                     </tr>
@@ -56,7 +56,7 @@
                     <tr>
                         <td>{{ appointment.id }}</td>
                         <td>{{ appointment.user.first_name }} {{ appointment.user.last_name }}</td>
-                        <td>{{ appointment.dentist }}</td>
+                        <td>{{ appointment.doctor }}</td>
                         <td>{{ appointment.date }} {{ appointment.time }}</td>
                         <td>{{ appointment.status }}</td>
                     </tr>
