--- a/myproject/patients/templates/login.html
+++ b/myproject/patients/templates/login.html
@@ -12,13 +12,20 @@
         <h2>Login</h2>
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
+            {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }}">{{ message }}</div>
+                {% endfor %}
+            </div>
+            {% endif %}
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+                {{ form.username }}
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                {{ form.password }}
             </div>
             <button type="submit">Login</button>
         </form>
