--- a/myproject/patients/templates/register.html
+++ b/myproject/patients/templates/register.html
@@ -8,10 +8,33 @@
     <link rel="stylesheet" href="{% static 'register.css' %}">
 </head>
 <body>
+    <header>
+        <h1>Register</h1>
+    </header>
     <div class="container">
-        <h2>Register</h2>
-        <form method="POST">
+        <form method="post" action="{% url 'register' %}">
             {% csrf_token %}
+            {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }}">{{ message }}</div>
+                {% endfor %}
+            </div>
+            {% endif %}
+            {% if form.errors %}
+            <div class="alert alert-error">
+                <ul>
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
             <div class="form-group">
                 <label for="username">Username:</label>
                 {{ form.username }}
